# rvideo

./: README.md  annotationwidget.cpp  annotationwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  movablerectitem.cpp  movablerectitem.h  qgraphicsvideoitem.cpp  qgraphicsvideoitem.h  qrc_res.cpp  res.qrc  rvideo.pro
VIBECLAUDEPLAYER/: AudioDecoder.cpp  AudioDecoder.h  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  README.md  SpectrogramWidget.cpp  SpectrogramWidget.h  VideoDecoder.cpp  VideoDecoder.h  VideoPlayerWidget.cpp  VideoPlayerWidget.h  main.cpp
drawingboard/: index.html  lens.html
drawingboard/css/: index.css
